added grid for wordle

--- a/react-flask-app/src/App.css
+++ b/react-flask-app/src/App.css
@@ -28,6 +28,33 @@
   color: #61dafb;
 }
 
+.square {
+  background: #fff;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 75px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 75px;
+}
+
+.square.greeg {
+  background: rgb(25, 193, 39);
+}
+
+.square.yellow {
+  background: yellow;
+}
+
+.square.grey {
+  background: lightgray;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
