possible words are filtered after the first guess

--- a/react-flask-app/src/App.css
+++ b/react-flask-app/src/App.css
@@ -63,6 +63,10 @@
   background: lightgray;
 }
 
+.square.white {
+  background: white;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
