--- a/react-flask-app/src/App.css
+++ b/react-flask-app/src/App.css
@@ -1,5 +1,24 @@
+* {
+  font-family: "Neue Helvetica", Helvetica, Arial, sans-serif;
+}
+
 .App {
   text-align: center;
+}
+
+.App-header {
+  background-color: #282c34;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
+}
+
+.App-link {
+  color: #61dafb;
 }
 
 .App-logo {
@@ -13,34 +32,41 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.board-row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.board-row button {
+  background-color: #26adda;
+  border: none;
+  border-radius: 5px;
   color: white;
+  cursor: pointer;
+  font-size: 16px;
+  margin-left: 10px;
+  padding: 10px 20px;
+  transition: background-color 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
+.board-row button:hover {
+  filter: brightness(85%);
 }
 
-.square {
-  background: #fff;
-  border: 1px solid #999;
-  float: left;
-  font-size: 24px;
-  font-weight: bold;
-  line-height: 34px;
-  height: 75px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 75px;
+.board-row button:disabled {
+  cursor: not-allowed;
+  filter: brightness(50%);
 }
 
 .letter {
@@ -49,6 +75,25 @@
   font-size: 54px;
   text-align: center;
   width: 65px;
+}
+
+.square {
+  background: #fff;
+  border: 1px solid #999;
+  display: flex;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  height: 75px;
+  justify-content: center;
+  align-items: center;
+  line-height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  overflow: visible;
+  padding: 0;
+  text-align: center;
+  width: 75px;
 }
 
 .square.green {
@@ -63,15 +108,13 @@
   background: lightgray;
 }
 
-.square.white {
-  background: white;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.square input {
+  background: transparent;
+  border: none;
+  color: black;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  text-align: center;
 }
