--- a/wordle-helper/src/App.css
+++ b/wordle-helper/src/App.css
@@ -55,6 +55,57 @@
   filter: brightness(50%);
 }
 
+.instructions-container {
+  background-color: #3a3f4b;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 0 0 25px;
+  max-width: 600px;
+  text-align: left;
+}
+
+.instructions-container ol {
+  margin: 10px 0 0;
+}
+
+.instructions-container li {
+  margin-bottom: 10px;
+  line-height: 1.4;
+  font-size: 16px;
+}
+
+.instructions-content {
+  max-height: 300px;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+}
+
+.instructions-label {
+  display: block;
+  padding: 0px;
+  text-align: center;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.instructions-label::after {
+  content: ' ▼';
+  float: right;
+}
+
+.instructions-toggle {
+  display: none;
+}
+
+.instructions-toggle:checked + .instructions-container .instructions-content {
+  max-height: 0;
+}
+
+.instructions-toggle:checked + .instructions-container .instructions-label::after {
+  content: ' ▲';
+}
+
 .letter {
   background: transparent;
   border-width: 0;
