--- a/wordle-helper/src/WordleListFetcher.css
+++ b/wordle-helper/src/WordleListFetcher.css
@@ -26,7 +26,7 @@
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
-    justify-content: flex-start;
+    justify-content: center;
     width: 100%;
 }
 
