--- a/wordle-helper/src/App.css
+++ b/wordle-helper/src/App.css
@@ -111,7 +111,7 @@ h1 {
 }
 
 p {
-  font-size: 16px;
+  font-size: 20px;
 }
 
 .square {
@@ -199,5 +199,9 @@ p {
 
   .instructions-container li {
     margin-bottom: 8px;
+  }
+
+  p {
+    font-size: 12px;
   }
 }
