--- a/wordle-helper/src/App.css
+++ b/wordle-helper/src/App.css
@@ -54,7 +54,6 @@ h1 {
   background-color: #3a3f4b;
   border-radius: 10px;
   padding: 15px;
-  margin: 0 0 30px;
   max-width: 100%;
   text-align: left;
 }
@@ -112,6 +111,21 @@ h1 {
 
 p {
   font-size: 20px;
+}
+
+.refresh-button {
+  background-color: #26adda;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 10px 20px;
+  margin: 15px 0;
+}
+
+.refresh-button:hover {
+  filter: brightness(85%);
 }
 
 .square {
@@ -185,7 +199,6 @@ p {
   .instructions-container {
     font-size: 13px;
     padding: 10px;
-    margin-bottom: 20px;
   }
 
   .instructions-label {
