--- a/wordle-helper/src/WordleListFetcher.css
+++ b/wordle-helper/src/WordleListFetcher.css
@@ -1,3 +1,14 @@
+.search-input {
+    width: 100%;
+    padding: 10px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 18px;
+}
+
 .word-button {
     display: block;
     width: 100%;
