--- a/wordle-helper/src/App.css
+++ b/wordle-helper/src/App.css
@@ -50,6 +50,10 @@ h1 {
   margin-bottom: 0;
 }
 
+h5 {
+  margin-bottom: 15px;
+}
+
 .instructions-container {
   background-color: #3a3f4b;
   border-radius: 10px;
@@ -107,10 +111,6 @@ h1 {
   font-size: 54px;
   text-align: center;
   width: 65px;
-}
-
-p {
-  font-size: 20px;
 }
 
 .refresh-button {
