--- a/wordle-helper/src/App.css
+++ b/wordle-helper/src/App.css
@@ -77,6 +77,7 @@ h5 {
   max-height: 300px;
   overflow: hidden;
   transition: max-height 0.3s ease-out;
+  padding: 0 10px 0;
 }
 
 .instructions-label {
